# AuroraOS-98

./: .gitignore  CONTRIBUTING.MD  LICENSE  Makefile  README.md  SHELL_STATUS.txt  aurora.toml  meson.build  run-aurora-qemu.command
.github/workflows/: pages.yml
assets/: manifest.json
distro/buildroot/: raspberrypi4_defconfig  raspberrypi5_defconfig  x86_64_chromium_defconfig
docs/: architecture.md  aurora-behavior-port.md  building.md  chromium-runtime.md  full-chromium-rootfs.md  graphics-stack.md  implementation-plan.md  networking.md  package-center.md  raspberry-pi.md  serenity-linux-adaptation.md  ui-style-guide.md
packaging/: default-apps.toml  feature-catalog.toml  optional-installers.toml
src/aurora-compositor/: README.md  main.c
src/aurora-explorer/: README.md  archive_manager.py  explorer.py
src/aurora-fb-shell/: SHELL.md  aurora_fb_shell.c  build.sh  diagnose.sh
src/aurora-package-center/: README.md  sources.toml
src/aurora-pi-hardwared/: README.md  main.c
src/aurora-serenity-bridge/: README.md  behavior_catalog.toml  component_map.toml
src/aurora-settings/: README.md
src/aurora-shell/: README.md  main.c  (+4 more)
tools/: build_arm64_qemu.py  build_firefox_qemu.py  build_full_chromium_image.py  build_linux_qemu.py  build_raspberry_pi_image.py  check_serenity_behavior_sources.py  extract_provided_icons.py  generate_pixel_icons.py  install_macos_user.sh  mk_linux_framebuffer_screens.py  mk_qemu_gui_boot.c  mk_qemu_icon_boot.py  mk_qemu_progress_boot.c  prepare_icon_pack.py  run_full_chromium_qemu.py
website/: app.js  index.html  styles.css
(+13 files in other folders)
